--- a/package.json
+++ b/package.json
@@ -55,9 +55,8 @@
             "vite": "^6.3.5"
       },
       "scripts": {
-            "dev": "vite",
-            "build": "vite build",
-            "preview": "vite preview",
-            "vercel-build": "vite build"
+      "dev": "vite",
+      "build": "npx vite build",
+      "preview": "vite preview"
       }
 }
