--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
             "@types/react-dom": "^19.2.2",
             "@vitejs/plugin-react": "^5.1.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "cross-env": "^10.1.0",
+            "rimraf": "^6.1.0",
             "vite": "^6.3.5"
       },
       "scripts": {
